0.09
 - Improve SYNOPSIS section in doc.
 - Rewrite doc to use POD =head2 on METHODS.

0.08 2020-02-28T18:09:13+01:00
 - Comment bad test and add TODO about it.
 - Fix test dependency for writing jpeg file.

0.07 2020-02-02T13:14:55+01:00
 - Add author tests.
 - Fix Makefile.PL fails with no '.' in @INC.
 - Fix doc.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve tests for create() method.
 - Update Module::Install to 1.19 version.
 - Update author github username.
 - Update author name.
 - Update copyright years.
 - Update .travis.yml to reality.

0.06 2014-10-24T02:02:01+02:00
 - Add tests.
 - Fix 'color' parameter default value in doc.
 - Fix 'type' parameter default value in doc.
 - Remove trailing whitespace from code.
 - Rewrite word "Suffix" to "Image type" in error message.
 - Simplify code (remove 'color_random' parameter).

0.05 2014-10-24T01:12:29+02:00
 - Add Image::Select to SEE ALSO section in doc.
 - Fix ERRORS section in doc.
 - Rewrite B<> to C<> in doc.

0.01 2014-10-23T18:22:08+02:00
 - First version.