@@ -1,4 +1,5 @@
 0.09
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
  - Rewrite doc to use POD =head2 on METHODS.
 
